erDiagram
    User ||--o{ MenstrualCycle : "One-To-Many"
    User ||--o{ HormoneLevel : "One-To-Many"
    User ||--o{ SymptomLog : "One-To-Many"
    User ||--o{ UserCondition : "One-To-Many"
    User ||--o{ PregnancyLog : "One-To-Many"
    User ||--o{ Notification : "One-To-Many"
    User ||--o{ GuestAccess : "One-To-Many(owner)"
    User ||--o{ GuestAccess : "One-To-Many(guest)"
    User ||--o{ AIQuery : "One-To-Many"
    User ||--|| MenopauseLog : "One-To-One"
    
    Condition ||--o{ UserCondition : "One-To-Many"
    Condition ||--o{ Notification : "One-To-Many"
    Condition }o--o{ Content : "Many-To-Many"
    Condition }o--o{ AIQuery : "Many-To-Many"
    
    MenstrualCycle ||--o{ CycleDay : "One-To-Many(cascade=[persist,remove])"
    CycleDay ||--o{ HormoneLevel : "One-To-Many(cascade=[persist,remove])"
    
    GuestAccess ||--o{ Notification : "One-To-Many(cascade=[persist,remove])"

    User {
        int id PK
        string email "length=180, unique"
        array roles
        string password
        string username "length=255"
        string name "length=255"
        string lastName "length=255"
        ProfileType profileType "enum"
        string genderIdentity "length=255"
        date birthDate
        datetime createdAt
        datetime updatedAt "nullable"
        bool state "default=true"
        bool onboardingCompleted "default=false"
    }
    
    MenstrualCycle {
        int id PK
        int user_id FK "not null"
        date startDate
        date endDate
        date estimatedNextStart
        int averageCycleLength
        int averageDuration
        string flowAmount "length=50, nullable"
        string flowColor "length=50, nullable"
        string flowOdor "length=50, nullable"
        int painLevel "nullable"
        string notes "length=255, nullable"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    CycleDay {
        int id PK
        int cycle_id FK "not null"
        date date
        smallint dayNumber
        CyclePhase phase "enum"
        json symptoms "nullable"
        json notes "nullable"
        json mood "nullable"
        smallint flowIntensity "nullable"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    HormoneLevel {
        int id PK
        int user_id FK "not null"
        int cycleDay_id FK "nullable"
        HormoneType hormoneType "enum"
        float level
        bool state "default=true"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    SymptomLog {
        int id PK
        int user_id FK "not null"
        date date
        string symptom "length=255"
        int intensity
        text notes "nullable"
        bool state "default=true"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    UserCondition {
        int id PK
        int user_id FK "not null"
        int condition_id FK "not null"
        date startDate
        date endDate "nullable"
        string notes "length=255, nullable"
        datetime createdAt
        datetime updatedAt "nullable"
        bool state "default=true"
    }
    
    Condition {
        int id PK
        string name "length=255"
        string description "length=255"
        bool isChronic "default=false"
        datetime createdAt
        datetime updatedAt "nullable"
        bool state "default=true"
    }
    
    PregnancyLog {
        int id PK
        int user_id FK "not null"
        date startDate
        date dueDate
        int week "nullable"
        text symptoms "nullable"
        text fetalMovements "nullable"
        date ultrasoundDate "nullable"
        string notes "length=255, nullable"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    MenopauseLog {
        int id PK
        int user_id FK "not null, OneToOne"
        bool hotFlashes "default=false, nullable"
        bool moodSwings "nullable"
        bool vaginalDryness "nullable"
        bool insomnia "nullable"
        bool hormoneTherapy "nullable"
        text notes "nullable"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    Notification {
        int id PK
        int user_id FK "not null"
        int guestAccess_id FK "nullable"
        int condition_id FK "nullable, relatedCondition"
        string title "length=255"
        text message
        string type "length=50"
        string priority "length=20, default=normal"
        string context "length=50, nullable"
        bool read "default=false"
        datetime readAt "nullable"
        datetime scheduledFor "nullable"
        datetime createdAt
        string targetUserType "length=30, nullable, default=primary"
        string relatedEntityType "length=100, nullable"
        int relatedEntityId "nullable"
        string actionUrl "length=255, nullable"
        string actionText "length=50, nullable"
        json metadata "nullable"
        bool dismissed "default=false"
    }
    
    Content {
        int id PK
        string title "length=255"
        text description
        text content
        ContentType type "enum"
        CyclePhase targetPhase "enum, nullable"
        json tags "nullable"
        string imageUrl "length=255, nullable"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    GuestAccess {
        int id PK
        int owner_id FK "nullable"
        int guest_id FK "not null"
        GuestType guestType "enum"
        array accessTo
        datetime expires_at
        bool state "default=true"
        datetime createdAt
        datetime updatedAt "nullable"
    }
    
    AIQuery {
        int id PK
        int user_id FK "not null"
        text query
        text response "nullable"
        datetime createdAt
        json metadata "nullable"
    }
    
    RefreshToken {
        int id PK
    }
